--- a/delphic/static/css/style.css
+++ b/delphic/static/css/style.css
@@ -16,7 +16,10 @@ body {
 }
 
 p {
-	font-size: 1rem;
+	font-size: 1.4em;
+	max-width: 600px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 h1, h2 {
@@ -28,7 +31,7 @@ h1 {
 }
 
 h2 {
-	font-size: 1.6rem;
+	font-size: 1.1rem;
 }
 
 h6 {
