--- a/delphic/templates/index.html
+++ b/delphic/templates/index.html
@@ -1,48 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Directory</h1>
-{% for cat, articles in categories %}
-        
-        
-    
-    {% if not cat == 'Blog' %}
-    <h2><a id='cats' href="{{ SITEURL }}/{{ cat.url }}">{{ cat.name }}</a></h2>
-    <div id="post-list">
-            {% for a in articles %}
-                   <div class="sheet">
-                       <article>
-                    <a class="entry">
-                                <h2 class="entry-title"><a href="{{ a.site }}" target="_blank" rel="bookmark" title="Permalink to {{ a.title|striptags }}">{{ a.title }}</a></h2>
-                            {% if a.address %}
-                            <div class="address">{{ a.address }}</div>
-                            {% endif %}
-                            {% if a.category == 'Blog' %}
-                            <footer class="post-info">
-                                <time class="published" datetime="{{ a.date.isoformat() }}"> {{ a.locale_date }} </time>
-                                <address class="vcard author">By
-                                {% for author in a.authors %}
-                                    <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
-                                {% endfor %}
-                                </address>
-                            </footer>
-                            <!-- /.post-info -->
-                            {% endif %}
-                            {% if a.tags %}
-                            <div>
-                              {% for tag in a.tags %}
-                              <a class="btn tag-btn" href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
-                              {% endfor %}
-                            </div>
-                            {% endif %}
-                            <div class="entry-content"> {{ a.summary }} </div><!-- /.entry-content -->
-                    </article>
-                </div>
-            {% endfor %}
-            </div>
-    {% endif %}
-    
-        {% endfor %}
-      
-</div>
-	
+
+<p>
+Hello, I'm Jorge.  
+<br>
+<br>
+That's Jorge like forge or gorge.
+I'm a maker culture professional and instructional designer from <a href="https://makersinchicago.org">Chicago</a>.
+I make, break, and fix things to learn– teaching and consulting on tech along the way.  
+<br><br>
+To best reach me, shoot me an <a href="mailto:jorge@jorgegarcia.io">email</a>.
+</p>
+<hr>
+
 {% endblock content %}
