--- a/pelican/delphic/static/css/style.css
+++ b/pelican/delphic/static/css/style.css
@@ -24,23 +24,7 @@ p {
 }
 
 h1, h2 {
-	font-family: Courier;
-}
-
-h1 {
-	font-size: 2.4rem;
-}
-
-h2 {
-	font-size: 1.1rem;
-}
-
-h6 {
-	font-family: 'Roboto';
-	font-weight: 400;
-	font-size: 1.3rem;
-	line-height: 1.7rem;
-	text-transform: uppercase;
+	font-family: 'Courier New';
 }
 
 sub {
