--- a/pelican/delphic/static/css/style.css
+++ b/pelican/delphic/static/css/style.css
@@ -25,6 +25,7 @@ p {
 
 h1, h2 {
 	font-family: 'Courier New';
+	font-weight: 900;
 }
 
 sub {
@@ -180,7 +181,7 @@ ul.nav li {
 	padding-left:8px;
 	padding-right:8px;
 	text-align:center;
-	font-family: Courier;
+	font-family: 'Courier New';
 	font-weight: 400;
 	font-size: 1.3em;
 	text-transform: lowercase;
@@ -192,9 +193,8 @@ ul.social li {
 	padding-left:8px;
 	padding-right:8px;
 	text-align:center;
-	font-family: 'courier';
+	font-family: 'Courier New';
 	font-weight: 400;
-	font-size: .9em;
 	text-transform: lowercase;
 }
 
@@ -202,7 +202,6 @@ ul.social li {
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 	font-style: italic;
-	font-size: .9em;
 }
 .row {
 	max-width: 900px;
