--- a/pelican/delphic/templates/base.html
+++ b/pelican/delphic/templates/base.html
@@ -53,12 +53,14 @@
 <div class="row">
   <div class="col-sm-12">
     <hr>
-        <div class="intro-description">{{ AUTHOR_INTRO }}</div>
         <ul class="social">
           {% for name, link in SOCIAL %}
           <li><a class="sc-{{ name }}" href="{{ link }}" target="_blank"><i class="fa fa-{{ name }}"> {{ name}}</i></a></li>
           {% endfor %}
         </ul>
+        <div class="intro-description">{{ AUTHOR_INTRO }}
+        </div>
+        <hr>
   </div>
 </div>
 
