--- a/pelican/delphic/static/css/style.css
+++ b/pelican/delphic/static/css/style.css
@@ -26,7 +26,6 @@ body {
 	font-family: 'Courier New';
 	font-size: 2.8rem;
 	border: .125rem solid #fff;
-	padding-left: 0px;
 }
 
 .bannerpurp {
@@ -35,17 +34,16 @@ body {
 }
 
 h1 {
-	padding-left: 1rem;
 	font-size: 3.2rem;
 	font-weight: 900;
 	color: #4D4D4D;
 	width: auto;
-	line-height: 120%;
 	font-family: 'Courier New', sans-serif;
 	border-top: 4px solid;
 	border-bottom: 4px solid;
 	border-image-source: linear-gradient(90deg, #9771B0, #fff, #fff);
 	border-image-slice: 1;
+	vertical-align: middle;
 }
 
 .col-md-10 > hr,
@@ -268,8 +266,8 @@ blockquote > p {
 	margin-top: -1em;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
 p > img {
-	max-width: 350px;
+	max-width: 49%;
   }
 }
